native/accelerate-ffi/src/accelerate.rs

unsafe extern "C" {
    pub fn cblas_zhpr(
        __Order: CBLAS_ORDER,
        __Uplo: CBLAS_UPLO,
        __N: ::std::os::raw::c_int,
        __alpha: f64,
        __X: *const ::std::os::raw::c_void,
        __incX: ::std::os::raw::c_int,
        __A: *mut ::std::os::raw::c_void,
    );
}
unsafe extern "C" {
    pub fn cblas_zher2(
        __Order: CBLAS_ORDER,
        __Uplo: CBLAS_UPLO,
        __N: ::std::os::raw::c_int,
        __alpha: *const ::std::os::raw::c_void,
        __X: *const ::std::os::raw::c_void,
        __incX: ::std::os::raw::c_int,
        __Y: *const ::std::os::raw::c_void,
        __incY: ::std::os::raw::c_int,
        __A: *mut ::std::os::raw::c_void,
        __lda: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn cblas_zhpr2(
        __Order: CBLAS_ORDER,
        __Uplo: CBLAS_UPLO,
        __N: ::std::os::raw::c_int,
        __alpha: *const ::std::os::raw::c_void,
        __X: *const ::std::os::raw::c_void,
        __incX: ::std::os::raw::c_int,
        __Y: *const ::std::os::raw::c_void,
        __incY: ::std::os::raw::c_int,
        __Ap: *mut ::std::os::raw::c_void,
    );
}
unsafe extern "C" {
    pub fn cblas_sgemm(
        __Order: CBLAS_ORDER,
        __TransA: CBLAS_TRANSPOSE,
        __TransB: CBLAS_TRANSPOSE,
        __M: ::std::os::raw::c_int,
        __N: ::std::os::raw::c_int,
        __K: ::std::os::raw::c_int,
        __alpha: f32,
        __A: *const f32,
        __lda: ::std::os::raw::c_int,
        __B: *const f32,
        __ldb: ::std::os::raw::c_int,
        __beta: f32,
        __C: *mut f32,
        __ldc: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn cblas_ssymm(
        __Order: CBLAS_ORDER,
        __Side: CBLAS_SIDE,
        __Uplo: CBLAS_UPLO,
        __M: ::std::os::raw::c_int,
        __N: ::std::os::raw::c_int,
        __alpha: f32,
        __A: *const f32,
        __lda: ::std::os::raw::c_int,
        __B: *const f32,
        __ldb: ::std::os::raw::c_int,
        __beta: f32,
        __C: *mut f32,
        __ldc: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn cblas_ssyrk(
        __Order: CBLAS_ORDER,
        __Uplo: CBLAS_UPLO,
        __Trans: CBLAS_TRANSPOSE,
        __N: ::std::os::raw::c_int,
        __K: ::std::os::raw::c_int,
        __alpha: f32,
        __A: *const f32,
        __lda: ::std::os::raw::c_int,
        __beta: f32,
        __C: *mut f32,
        __ldc: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn cblas_ssyr2k(
        __Order: CBLAS_ORDER,
        __Uplo: CBLAS_UPLO,
        __Trans: CBLAS_TRANSPOSE,
        __N: ::std::os::raw::c_int,
        __K: ::std::os::raw::c_int,
        __alpha: f32,
        __A: *const f32,
        __lda: ::std::os::raw::c_int,
        __B: *const f32,
        __ldb: ::std::os::raw::c_int,
        __beta: f32,
        __C: *mut f32,
        __ldc: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn cblas_strmm(
        __Order: CBLAS_ORDER,
        __Side: CBLAS_SIDE,
        __Uplo: CBLAS_UPLO,
        __TransA: CBLAS_TRANSPOSE,
        __Diag: CBLAS_DIAG,
        __M: ::std::os::raw::c_int,
        __N: ::std::os::raw::c_int,
        __alpha: f32,
        __A: *const f32,
        __lda: ::std::os::raw::c_int,
        __B: *mut f32,
        __ldb: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn cblas_strsm(
        __Order: CBLAS_ORDER,
        __Side: CBLAS_SIDE,
        __Uplo: CBLAS_UPLO,
        __TransA: CBLAS_TRANSPOSE,
        __Diag: CBLAS_DIAG,
        __M: ::std::os::raw::c_int,
        __N: ::std::os::raw::c_int,
        __alpha: f32,
        __A: *const f32,
        __lda: ::std::os::raw::c_int,
        __B: *mut f32,
        __ldb: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn cblas_dgemm(
        __Order: CBLAS_ORDER,
        __TransA: CBLAS_TRANSPOSE,
        __TransB: CBLAS_TRANSPOSE,
        __M: ::std::os::raw::c_int,
        __N: ::std::os::raw::c_int,
        __K: ::std::os::raw::c_int,
        __alpha: f64,
        __A: *const f64,
        __lda: ::std::os::raw::c_int,
        __B: *const f64,
        __ldb: ::std::os::raw::c_int,
        __beta: f64,
        __C: *mut f64,
        __ldc: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn cblas_dsymm(
        __Order: CBLAS_ORDER,
        __Side: CBLAS_SIDE,
        __Uplo: CBLAS_UPLO,
        __M: ::std::os::raw::c_int,
        __N: ::std::os::raw::c_int,
        __alpha: f64,
        __A: *const f64,
        __lda: ::std::os::raw::c_int,
        __B: *const f64,
        __ldb: ::std::os::raw::c_int,
        __beta: f64,
        __C: *mut f64,
        __ldc: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn cblas_dsyrk(
        __Order: CBLAS_ORDER,
        __Uplo: CBLAS_UPLO,
        __Trans: CBLAS_TRANSPOSE,
        __N: ::std::os::raw::c_int,
        __K: ::std::os::raw::c_int,
        __alpha: f64,
        __A: *const f64,
        __lda: ::std::os::raw::c_int,
        __beta: f64,
        __C: *mut f64,
        __ldc: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn cblas_dsyr2k(
        __Order: CBLAS_ORDER,
        __Uplo: CBLAS_UPLO,
        __Trans: CBLAS_TRANSPOSE,
        __N: ::std::os::raw::c_int,
        __K: ::std::os::raw::c_int,
        __alpha: f64,
        __A: *const f64,
        __lda: ::std::os::raw::c_int,
        __B: *const f64,
        __ldb: ::std::os::raw::c_int,
        __beta: f64,
        __C: *mut f64,
        __ldc: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn cblas_dtrmm(
        __Order: CBLAS_ORDER,
        __Side: CBLAS_SIDE,
        __Uplo: CBLAS_UPLO,
        __TransA: CBLAS_TRANSPOSE,
        __Diag: CBLAS_DIAG,
        __M: ::std::os::raw::c_int,
        __N: ::std::os::raw::c_int,
        __alpha: f64,
        __A: *const f64,
        __lda: ::std::os::raw::c_int,
        __B: *mut f64,
        __ldb: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn cblas_dtrsm(
        __Order: CBLAS_ORDER,
        __Side: CBLAS_SIDE,
        __Uplo: CBLAS_UPLO,
        __TransA: CBLAS_TRANSPOSE,
        __Diag: CBLAS_DIAG,
        __M: ::std::os::raw::c_int,
        __N: ::std::os::raw::c_int,
        __alpha: f64,
        __A: *const f64,
        __lda: ::std::os::raw::c_int,
        __B: *mut f64,
        __ldb: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn cblas_cgemm(
        __Order: CBLAS_ORDER,
        __TransA: CBLAS_TRANSPOSE,
        __TransB: CBLAS_TRANSPOSE,
        __M: ::std::os::raw::c_int,
        __N: ::std::os::raw::c_int,
        __K: ::std::os::raw::c_int,
        __alpha: *const ::std::os::raw::c_void,
        __A: *const ::std::os::raw::c_void,
        __lda: ::std::os::raw::c_int,
        __B: *const ::std::os::raw::c_void,
        __ldb: ::std::os::raw::c_int,
        __beta: *const ::std::os::raw::c_void,
        __C: *mut ::std::os::raw::c_void,
        __ldc: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn cblas_csymm(
        __Order: CBLAS_ORDER,
        __Side: CBLAS_SIDE,
        __Uplo: CBLAS_UPLO,
        __M: ::std::os::raw::c_int,
        __N: ::std::os::raw::c_int,
        __alpha: *const ::std::os::raw::c_void,
        __A: *const ::std::os::raw::c_void,
        __lda: ::std::os::raw::c_int,
        __B: *const ::std::os::raw::c_void,
        __ldb: ::std::os::raw::c_int,
        __beta: *const ::std::os::raw::c_void,
        __C: *mut ::std::os::raw::c_void,
        __ldc: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn cblas_csyrk(
        __Order: CBLAS_ORDER,
        __Uplo: CBLAS_UPLO,
        __Trans: CBLAS_TRANSPOSE,
        __N: ::std::os::raw::c_int,
        __K: ::std::os::raw::c_int,
        __alpha: *const ::std::os::raw::c_void,
        __A: *const ::std::os::raw::c_void,
        __lda: ::std::os::raw::c_int,
        __beta: *const ::std::os::raw::c_void,
        __C: *mut ::std::os::raw::c_void,
        __ldc: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn cblas_csyr2k(
        __Order: CBLAS_ORDER,
        __Uplo: CBLAS_UPLO,
        __Trans: CBLAS_TRANSPOSE,
        __N: ::std::os::raw::c_int,
        __K: ::std::os::raw::c_int,
        __alpha: *const ::std::os::raw::c_void,
        __A: *const ::std::os::raw::c_void,
        __lda: ::std::os::raw::c_int,
        __B: *const ::std::os::raw::c_void,
        __ldb: ::std::os::raw::c_int,
        __beta: *const ::std::os::raw::c_void,
        __C: *mut ::std::os::raw::c_void,
        __ldc: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn cblas_ctrmm(
        __Order: CBLAS_ORDER,
        __Side: CBLAS_SIDE,
        __Uplo: CBLAS_UPLO,
        __TransA: CBLAS_TRANSPOSE,
        __Diag: CBLAS_DIAG,
        __M: ::std::os::raw::c_int,
        __N: ::std::os::raw::c_int,
        __alpha: *const ::std::os::raw::c_void,
        __A: *const ::std::os::raw::c_void,
        __lda: ::std::os::raw::c_int,
        __B: *mut ::std::os::raw::c_void,
        __ldb: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn cblas_ctrsm(
        __Order: CBLAS_ORDER,
        __Side: CBLAS_SIDE,
        __Uplo: CBLAS_UPLO,
        __TransA: CBLAS_TRANSPOSE,
        __Diag: CBLAS_DIAG,
        __M: ::std::os::raw::c_int,
        __N: ::std::os::raw::c_int,
        __alpha: *const ::std::os::raw::c_void,
        __A: *const ::std::os::raw::c_void,
        __lda: ::std::os::raw::c_int,
        __B: *mut ::std::os::raw::c_void,
        __ldb: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn cblas_zgemm(
        __Order: CBLAS_ORDER,
        __TransA: CBLAS_TRANSPOSE,
        __TransB: CBLAS_TRANSPOSE,
        __M: ::std::os::raw::c_int,
        __N: ::std::os::raw::c_int,
        __K: ::std::os::raw::c_int,
        __alpha: *const ::std::os::raw::c_void,
        __A: *const ::std::os::raw::c_void,
        __lda: ::std::os::raw::c_int,
        __B: *const ::std::os::raw::c_void,
        __ldb: ::std::os::raw::c_int,
        __beta: *const ::std::os::raw::c_void,
        __C: *mut ::std::os::raw::c_void,
        __ldc: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn cblas_zsymm(
        __Order: CBLAS_ORDER,
        __Side: CBLAS_SIDE,
        __Uplo: CBLAS_UPLO,
        __M: ::std::os::raw::c_int,
        __N: ::std::os::raw::c_int,
        __alpha: *const ::std::os::raw::c_void,
        __A: *const ::std::os::raw::c_void,
        __lda: ::std::os::raw::c_int,
        __B: *const ::std::os::raw::c_void,
        __ldb: ::std::os::raw::c_int,
        __beta: *const ::std::os::raw::c_void,
        __C: *mut ::std::os::raw::c_void,
        __ldc: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn cblas_zsyrk(
        __Order: CBLAS_ORDER,
        __Uplo: CBLAS_UPLO,
        __Trans: CBLAS_TRANSPOSE,
        __N: ::std::os::raw::c_int,
        __K: ::std::os::raw::c_int,
        __alpha: *const ::std::os::raw::c_void,
        __A: *const ::std::os::raw::c_void,
        __lda: ::std::os::raw::c_int,
        __beta: *const ::std::os::raw::c_void,
        __C: *mut ::std::os::raw::c_void,
        __ldc: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn cblas_zsyr2k(
        __Order: CBLAS_ORDER,
        __Uplo: CBLAS_UPLO,
        __Trans: CBLAS_TRANSPOSE,
        __N: ::std::os::raw::c_int,
        __K: ::std::os::raw::c_int,
        __alpha: *const ::std::os::raw::c_void,
        __A: *const ::std::os::raw::c_void,
        __lda: ::std::os::raw::c_int,
        __B: *const ::std::os::raw::c_void,
        __ldb: ::std::os::raw::c_int,
        __beta: *const ::std::os::raw::c_void,
        __C: *mut ::std::os::raw::c_void,
        __ldc: ::std::os::raw::c_int,
    );
}
